--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <!-- <meta
+      name="description"
+      content="Web Developer | Software Developer"
+    /> -->
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="FullStack Developer | Software Developer"
     />
+    <meta name="keywords" content="Web Developer, Software Developer, Angular, React, Nodejs, Expressjs, HTML, CSS, Java Developer, React Developer, frontend developer, backend developer, Angular Developer, node developer, fullstack developer, fullstack, fullstack engineer, software engineer"/>
+    <meta name="robots" content="index, follow"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Abhishek Shivade | Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
